# curso_python

./: README.md  pyproject.toml
aula16/: tupla.py
aula17/: lista.py
aula19/: dicionarios.py
