[tool.poetry]
name = "curso"
version = "1.0.0"
description = "Apredendo python com o curso em vídeo"
authors = ["Raivaz <rai.vaz@inacsistemas.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
